--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- COUPLE SECTION -->
     <section id="couple" class="d-flex vh-100">
         <div class="container m-auto text-center">
-            <h2 class="f-sacramento display-1">Calon Pengantin</h2>
+            <h2 class="f-sacramento display-1 lh-lg"><u>Calon Pengantin</u></h2>
             <div class="row">
                 <div class="col-lg-5">
                     <div class="row align-items-center">
