--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
     <link rel="stylesheet" href="dist/css/main.css">
 </head>
-<body>
+<body data-spy="scroll" data-target="#navbar">
     
     <!-- NAVBAR -->
     <nav id="navbar" class="fixed-bottom">
         <div class="wrapper">
             <div class="nav nav-fill">
-                <a class="nav-link active" href="#cover">Home</a>
+                <a class="nav-link" href="#cover">Home</a>
                 <a class="nav-link" href="#opening">Info</a>
                 <a class="nav-link" href="#couple">Couple</a>
                 <a class="nav-link" href="#detail">Detail</a>
@@ -200,6 +200,10 @@
         </div>
     </section>
 
+	<!-- COUNTDOWN -->
     <script src="plugins/countdown/flip-countdown.js"></script>
+	<!-- NAVBAR -->
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
