--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					</div>
                     
 					<div class="countdown m-2"></div>
-					<a target="_blank" class="btn btn-outline-pink fw-bold mt-3" href="https://calendar.google.com/calendar/u/0/r/eventedit?text=Surya+Arrum+Wedding&details=Lokasi+:+Taman+Adiyasa&dates=20231230T100000/20231230T220000&location=SysNet, Blok A.18 No.28, Jl. Raya Taman Adiyasa, Cikasungka, Kec. Solear, Kabupaten Tangerang, Banten 15730, Indonesia&pli=1">Ingatkan Saya!</a>
+					<a target="_blank" class="btn btn-outline-pink mt-3 fw-bold" href="https://calendar.google.com/calendar/u/0/r/eventedit?text=Surya+Arrum+Wedding&details=Lokasi+:+Taman+Adiyasa&dates=20231230T100000/20231230T220000&location=SysNet, Blok A.18 No.28, Jl. Raya Taman Adiyasa, Cikasungka, Kec. Solear, Kabupaten Tangerang, Banten 15730, Indonesia&pli=1">Ingatkan Saya!</a>
                 </div>
             </div>
         </div>
@@ -160,7 +160,7 @@
 
                             <div class="card-text">
                                 <p>Perumahan Annieland Blok H.10/No.51, RT.01 RW.10, Desa. Cempaka, Kec. Cisoka, Kab. Tangerang</p>
-                                <a href="#" class="btn btn-outline-pink fw-bold">Lihat Lokasi</a>
+                                <a href="#" class="btn btn-outline-pink mt-2 fw-bold">Lihat Lokasi</a>
                             </div>
                         </div>
                     </div>
@@ -190,7 +190,7 @@
 
                             <div class="card-text">
                                 <p>Perumahan Taman Adiyasa Blok A.18/No.28, RT.04 RW.05, Kel. Cikasungka, Kec. Solear, Kab. Tangerang</p>
-                                <a href="#" class="btn btn-outline-pink fw-bold">Lihat Lokasi</a>
+                                <a href="#" class="btn btn-outline-pink mt-2 fw-bold">Lihat Lokasi</a>
                             </div>
                         </div>
                     </div>
