--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- OPENING SECTION -->
     <section id="opening">
-        <div class="container m-auto">
+        <div class="container mt-3">
             <div class="merge row vh-100">
                 <div class="col-lg-10 col-11 m-auto text-center">
                     <h2 class="fs-1 fw-semibold text-pink">QS. Ar-Rum : 21</h2>
