--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
     </section>
 
     <!-- DETAIL SECTION -->
-    <section id="detail" class="mt-3">
-        <div class="container m-auto text-center">
+    <section id="detail">
+        <div class="container mt-5 text-center">
             <h2 class="f-sacramento display-1 fw-bold">Detail Acara</h2>
             <div class="row justify-content-center">
 
