--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     </section>
 
     <!-- COUPLE SECTION -->
-    <section id="couple">
+    <section id="couple" class="vh-75">
         <div class="container m-auto text-center">
             <h2 class="f-sacramento display-1 lh-lg">Calon Pengantin</h2>
             <div class="row mt-5">
