--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
                             <div class="card-text">
                                 <p>Perumahan Annieland Blok H.10/No.51, RT.01 RW.10, Desa. Cempaka, Kec. Cisoka, Kab. Tangerang</p>
-                                <a href="#" class="btn btn-outline-pink mt-2 fw-bold">Lihat Lokasi</a>
+                                <a href="https://goo.gl/maps/uMXRbmMBAhiFrN3G9" class="btn btn-outline-pink mt-2 fw-bold">Lihat Lokasi</a>
                             </div>
                         </div>
                     </div>
@@ -190,7 +190,7 @@
 
                             <div class="card-text">
                                 <p>Perumahan Taman Adiyasa Blok A.18/No.28, RT.04 RW.05, Kel. Cikasungka, Kec. Solear, Kab. Tangerang</p>
-                                <a href="#" class="btn btn-outline-pink mt-2 fw-bold">Lihat Lokasi</a>
+                                <a href="https://goo.gl/maps/dLwe9FkETAa4Pdwj6" class="btn btn-outline-pink mt-2 fw-bold">Lihat Lokasi</a>
                             </div>
                         </div>
                     </div>
