--- a/index.html
+++ b/index.html
@@ -108,9 +108,11 @@
                     </div>
                 </div>
                 
-                <span class="col-lg-2 f-tangerine display-1 fw-bold"><em>&</em></span>
+                <span class="col-lg-2 mt-3 f-tangerine display-1 fw-bold">
+					<em>&</em>
+				</span>
         
-                <div class="col-lg-5">
+                <div class="col-lg-5 mt-3">
                     <div class="row align-items-center">
                         <div class="col-4">
                             <img src="dist/img/bride.png" class="img-responsive rounded-circle w-100" width="200px">
