--- a/index.html
+++ b/index.html
@@ -19,10 +19,30 @@
     <nav id="navbar" class="fixed-bottom">
         <div class="wrapper">
             <div class="nav nav-fill">
-                <a class="nav-link" href="#cover">Home</a>
-                <a class="nav-link" href="#opening">Info</a>
-                <a class="nav-link" href="#couple">Couple</a>
-                <a class="nav-link" href="#detail">Detail</a>
+                <a class="nav-link active" href="#cover">
+                    <i class="bi bi-house-heart-fill"></i>
+                    <span>Home</span>
+                </a>
+                <a class="nav-link" href="#couple">
+                    <i class="bi bi-heart-fill"></i>
+                    <span>Couple</span>
+                </a>
+                <a class="nav-link" href="#detail">
+                    <i class="bi bi-calendar2-heart"></i>
+                    <span>Detail</span>
+                </a>
+                <a class="nav-link" href="#story">
+                    <i class="bi bi-chat-heart"></i>
+                    <span>Story</span>
+                </a>
+                <a class="nav-link" href="#gallery">
+                    <i class="bi bi-images"></i>
+                    <span>Gallery</span>
+                </a>
+                <a class="nav-link" href="#rsvp">
+                    <i class="bi bi-envelope-paper-heart"></i>
+                    <span>RSVP</span>
+                </a>
             </div>
         </div>
     </nav>
