--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+	<!-- FAVICON -->
+	<link rel="shortcut icon" href="dist/img/icon.svg" type="image/x-icon">
     <!-- COUNTDOWN -->
     <link rel="stylesheet" href="plugins/countdown/flip-countdown.custom.css">
 
