--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body data-spy="scroll" data-target="#navbar">
     
     <!-- NAVBAR -->
-    <nav id="navbar" class="fixed-bottom">
+    <nav id="navbar" class="fixed-bottom d-none">
         <div class="wrapper">
             <div class="nav nav-fill">
                 <a class="nav-link active" href="#cover">
@@ -52,7 +52,7 @@
 	<!-- WIDGET -->
 	<aside>
 		<!-- AUDIO -->
-		<div class="left-widget btn-audio">
+		<div class="left-widget btn-audio d-none">
 			<script>
 				var settingAutoplay = "yes";
 				window.settingAutoplay =
@@ -108,7 +108,7 @@
 			</div>
 		</div>
 		<!-- GIFT -->
-        <button id="donate" class="left-widget btn-donation mb-3" type="button" data-bs-toggle="popover" data-bs-title="Amplop Digital" data-bs-content="Doa restu keluarga, sahabat, dan rekan di pernikahan kita sudah cukup sebagai kado, namun jika memberi adalah tanda cinta, kita dengan senang hati menerimanya dan tentunya semakin melengkapi kebahagiaan kita.">
+        <button id="donate" class="left-widget btn-donation mb-3 d-none" type="button" data-bs-toggle="popover" data-bs-title="Amplop Digital" data-bs-content="Doa restu keluarga, sahabat, dan rekan di pernikahan kita sudah cukup sebagai kado, namun jika memberi adalah tanda cinta, kita dengan senang hati menerimanya dan tentunya semakin melengkapi kebahagiaan kita.">
 			<i class="fa-solid fa-gift"></i>
 		</button>
 	</aside>
@@ -120,7 +120,7 @@
             <h1 class="f-tangerine text-pink fw-bold">Surya & Arrum</h1>
             <p>Kepada Yth.</p>
             <h3 class="display-5 f-dancing">Tamu Undangan</h3>
-            <a href="#opening" class="btn btn-outline-pink fw-bold mt-3" target="_self">
+            <a id="btnopen" href="#opening" class="btn btn-outline-pink fw-bold mt-3" target="_self">
                 Lihat Undangan
             </a>
         </main>
@@ -288,6 +288,23 @@
         </div>
     </section>
 
+	<!-- LOCATION SECTION -->
+	<section id="location">
+		<div class="container">
+			<h2 class="f-sacramento display-1 fw-bold">Lokasi Acara</h2>
+			<br />
+			<iframe
+			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.509710806634!2d106.42348507374183!3d-6.327933061915556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e420f467ce7fc9b%3A0xf221fd7ca50b519!2sSysNet!5e0!3m2!1sen!2sid!4v1691692769409!5m2!1sen!2sid"
+			width="350vw"
+			height="350vw"
+			style="border: 1px solid black;"
+			allowfullscreen=""
+			loading="lazy"
+			referrerpolicy="no-referrer-when-downgrade"
+			></iframe>
+		</div>
+	</section>
+	
     <!-- STORY SECTION -->
     <section id="story">
         <div class="container">
@@ -398,13 +415,46 @@
         </div>
     </section>
 
+	<section id="wish">
+		<div class="w-50 mt-5 text-start">
+			<h2 class="f-sacramento display-1 fw-bold">Kolom Komentar</h2>
+			<form id="comment-form">
+				<div class="form-group">
+					<label for="name">Nama Pengirim</label>
+					<input
+						type="text"
+						class="form-control"
+						id="name"
+						required
+					/>
+				</div>
+				<div class="form-group">
+					<label for="message">Isi Pesan</label>
+					<textarea
+						class="form-control"
+						id="message"
+						rows="3"
+						required
+					></textarea>
+				</div>
+				<button type="submit" class="btn btn-primary">Kirim</button>
+			</form>
+			<div id="comment-section" class="mt-3"></div>
+		</div>
+	</section>
+
+    <script src="plugins/btnopen.js"></script>
 	<!-- BOOTSTRAP -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- COUNTDOWN -->
-    <script src="plugins/countdown/flip-countdown.js"></script>
 	<!-- NAVBAR -->
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- COUNTDOWN -->
+    <script src="plugins/countdown/flip-countdown.js"></script>
+	<!-- COMMENT -->
+    <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-database.js"></script>
+    <script src="dist/js/get-database.js"></script>
 
 </body>
 </html>
