--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
 	<!-- LOCATION SECTION -->
 	<section id="location">
-		<div class="container">
+		<div class="container m-auto text-center">
 			<h2 class="f-sacramento display-1 fw-bold">Lokasi Acara</h2>
 			<br />
 			<iframe
@@ -416,7 +416,7 @@
     </section>
 
 	<section id="wish">
-		<div class="w-50 mt-5 text-start">
+		<div class="container m-auto text-center w-50 mt-5">
 			<h2 class="f-sacramento display-1 fw-bold">Kolom Komentar</h2>
 			<form id="comment-form">
 				<div class="form-group">
