--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 			</form>
 			
 			<div class="row mt-3 g-2 justify-content-center align-items-center">
-				<div class="vh-100 col-lg-6 col-11">
+				<div class="col-lg-6 col-11">
 					<h3>Komentar</h3>
 					<form id="commentForm">
 						<div class="form-group">
