--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
 	<!-- GALLERY -->
 	<section id="gallery">
-		<div class="container m-auto text-center">
+		<div class="container m-auto mb-lg-5 text-center">
 			<h2 class="f-sacramento display-1 fw-bold">Gallery</h2>
 			<div id="myCarousel" class="carousel slide w-75 m-auto" data-bs-ride="carousel" data-bs-touch="true" data-bs-interval="4000">
 				<img src="https://placebeard.it/500/500" alt="Image 1" class="w-100 object-fit-cover rounded" style="aspect-ratio: 2/1; object-position: 50% 70%;">
