--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 									<span>30 Desember 2023</span>
 								</div>
 								<div class="timeline-body">
-									<p>Percayalah, bukan karna bertemu lalu berjodoh tapi karna berjodoh lah maka kami dipertemukan, kami memutuskan untuk mengikrarkan janji suci pernikahan kami dibulan Desember In Syaa Allah.</p>
+									<p>Percayalah, bukan karna bertemu lalu berjodoh tapi karna berjodoh lah maka kami dipertemukan, kami memutuskan untuk mengikrarkan janji suci pernikahan kami dibulan Desember Insyaa Allah.</p>
 								</div>
 							</div>
 						</li>
