--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="row merge vh-100" data-aos="zoom-in-up">
 				<center class="col-lg-10 col-11 m-auto">
 					<h2 class="fs-1 fw-semibold text-pink">QS. Ar-Rum : 21</h2>
-					<h5 class="fs-1 my-lg-4">
+					<h5 class="f-arabic fs-1 my-lg-4">
 						وَمِنْ ءَايَٰتِهِۦٓ أَنْ خَلَقَ لَكُم مِّنْ أَنفُسِكُمْ أَزْوَٰجًا لِّتَسْكُنُوٓا۟ إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً ۚ 
 						إِنَّ فِى ذَٰلِكَ لَءَايَٰتٍ لِّقَوْمٍ يَتَفَكَّرُونَ
 					</h5>
@@ -92,7 +92,7 @@
 
 			<div class="row merge mt-3 mb-5" data-aos="zoom-in-up">
 				<center class="col-lg-10 col-11 m-auto">
-					<!-- <h3>꧁<span class="arabic display-3"> ﷽</span>꧂</h3> -->
+					<!-- <h3>꧁<span class="f-arabic display-3"> ﷽</span>꧂</h3> -->
 					<h2><span class="display-4 text-pink"> ﷽</span></h2>
 					<p>
 						Assalamu’alaikum Warahmatullahi Wabarakatuh
