--- a/index.html
+++ b/index.html
@@ -598,8 +598,8 @@
 						</div>
 						<div class="tab-content py-3 px-5 bg-primary text-white text-center" id="pills-tabContent">
 							<div class="tab-pane fade show active" id="pills-bca">
-								<p>a/n Surya Mauliadi</p>
-								<label class="copy-content">7621323222</label>
+								<p>a/n Arrum Hidayati</p>
+								<label class="copy-content">7111298789</label>
 								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
 										<path fill-rule="evenodd"
@@ -610,8 +610,8 @@
 								</button>
 							</div>
 							<div class="tab-pane fade" id="pills-bni">
-								<p>a/n Surya Mauliadi</p>
-								<label class="copy-content">7621323222</label>
+								<p>a/n Arrum Hidayati</p>
+								<label class="copy-content">1256594765</label>
 								<button type="button" class="btn btn-light ms-1 mt-1" onclick="copyText(this)" data-message="Tersalin">
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy" viewBox="0 0 16 16">
 										<path fill-rule="evenodd"
