--- a/index.html
+++ b/index.html
@@ -550,7 +550,9 @@
 		<div class="col-6">
 			<div class="row gap-4">
 				<div class="col-12 col-lg-1 p-0">
-					<button class="btn btn-success rasio-1x1 rounded-circle" data-bs-toggle="modal" data-bs-target="#modal">
+					<button class="btn btn-success rasio-1x1 rounded-circle"
+						data-bs-toggle="modal" data-bs-target="#modal"
+					>
 						<i class="bi bi-gift-fill"></i>
 					</button>
 				</div>
@@ -711,7 +713,7 @@
 </div>
 
 <!-- BOOTSTRAP -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <!-- BACKGROUND -->
 <script src="./dist/js/canvallax.js"></script>
 <script src="./dist/js/background.js"></script>
