--- a/index.html
+++ b/index.html
@@ -732,10 +732,37 @@
 <script src="./dist/js/trigger.js"></script>
 <script src="./dist/js/features.js"></script>
 <script>
-	var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle-2="popover"]'))
-	var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-	  	return new bootstrap.Popover(popoverTriggerEl)
-	})
+    document.addEventListener('DOMContentLoaded', function() {
+        // const popoverTriggerList = document.querySelectorAll('[data-bs-toggle="popover"]')
+        // const popoverList = [...popoverTriggerList].map(popoverTriggerEl => new bootstrap.Popover(popoverTriggerEl))
+        // const popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle-2="popover"]'))
+        // const popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+        //   	return new bootstrap.Popover(popoverTriggerEl, {
+        // 	})
+        // })
+        var popoverElement = document.querySelector('[data-bs-toggle-2="popover"]');
+        var popover = new bootstrap.Popover(popoverElement);
+        var popoverShown = false; // Tambahkan variabel untuk melacak apakah popover sudah ditampilkan
+
+        function showPopoverIfInSection(sectionId) {
+            var section = document.getElementById(sectionId);
+            var sectionTop = section.offsetTop;
+            var sectionBottom = sectionTop + section.offsetHeight;
+            var scrollPosition = window.scrollY;
+
+            if (scrollPosition >= sectionTop && scrollPosition <= sectionBottom && !popoverShown) {
+                popover.show();
+                popoverShown = true; // Set variabel popoverShown menjadi true setelah popover ditampilkan
+            }
+        }
+
+        // Panggil fungsi untuk menampilkan popover jika pengguna berada di section tertentu
+        showPopoverIfInSection('gallery'); // Ganti dengan ID dari section yang ingin Anda monitor
+
+        window.addEventListener('scroll', function() {
+            showPopoverIfInSection('gallery'); // Ganti dengan ID dari section yang ingin Anda monitor
+        });
+    });
 </script>
 </body>
 </html>
