--- a/index.html
+++ b/index.html
@@ -553,7 +553,8 @@
 					<button class="btn btn-success rasio-1x1 rounded-circle"
 						data-bs-toggle="modal" data-bs-target="#modal"
 						data-bs-toggle-2="popover" data-bs-placement="right"
-						data-bs-title="Amplop Digital"
+						data-bs-custom-class="custom-popover"
+						title="Amplop Digital"
 						data-bs-content="Sekarang hadiahmu bisa tersampaikan secara digital."
 						data-bs-trigger="hover focus"
 					>
