--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="row merge vh-100" data-aos="zoom-in-up">
 				<center class="col-lg-10 col-11 m-auto">
 					<h2 class="fs-1 fw-semibold text-pink">QS. Ar-Rum : 21</h2>
-					<h5 class="f-arabic fs-1 my-lg-4">
+					<h5 class="fs-1 my-lg-4">
 						وَمِنْ ءَايَٰتِهِۦٓ أَنْ خَلَقَ لَكُم مِّنْ أَنفُسِكُمْ أَزْوَٰجًا لِّتَسْكُنُوٓا۟ إِلَيْهَا وَجَعَلَ بَيْنَكُم مَّوَدَّةً وَرَحْمَةً ۚ 
 						إِنَّ فِى ذَٰلِكَ لَءَايَٰتٍ لِّقَوْمٍ يَتَفَكَّرُونَ
 					</h5>
@@ -741,15 +741,17 @@
         //   	return new bootstrap.Popover(popoverTriggerEl, {
         // 	})
         // })
-        var popoverElement = document.querySelector('[data-bs-toggle-2="popover"]');
-        var popover = new bootstrap.Popover(popoverElement);
-        var popoverShown = false; // Tambahkan variabel untuk melacak apakah popover sudah ditampilkan
+        const popoverElement = document.querySelector('[data-bs-toggle-2="popover"]');
+        const popover = new bootstrap.Popover(popoverElement, {
+			template:'<div class="popover" role="tooltip"><div class="popover-arrow"></div><h3 class="popover-header bg-pink"></h3><div class="popover-body"></div></div>'
+		});
+        let popoverShown = false; // Tambahkan variabel untuk melacak apakah popover sudah ditampilkan
 
         function showPopoverIfInSection(sectionId) {
-            var section = document.getElementById(sectionId);
-            var sectionTop = section.offsetTop;
-            var sectionBottom = sectionTop + section.offsetHeight;
-            var scrollPosition = window.scrollY;
+            const section = document.getElementById(sectionId);
+			const sectionTop = section.offsetTop;
+			const sectionBottom = sectionTop + section.offsetHeight;
+			const scrollPosition = window.scrollY;
 
             if (scrollPosition >= sectionTop && scrollPosition <= sectionBottom && !popoverShown) {
                 popover.show();
