--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 				<div class="col">
 					<ul class="timeline text-black">
 						<li data-aos="zoom-in">
-							<div class="timeline-image" style="background-image: url(https://picsum.photos/250/250);"></div>
+							<div class="timeline-image" style="background-image: url(./dist/img/first-meet.jpg);"></div>
 							<div class="timeline-panel bg-pink text-white first-child">
 								<div class="timeline-heading">
 									<h3>Pertama Bertemu</h3>
@@ -279,7 +279,7 @@
 						</li>
 
 						<li class="timeline-inverted" data-aos="zoom-in">
-							<div class="timeline-image" style="background-image: url(https://picsum.photos/275/275);"></div>
+							<div class="timeline-image" style="background-image: url(./dist/img/pdkt.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3>Pendekatan</h3>
@@ -292,7 +292,7 @@
 						</li>
 
 						<li data-aos="zoom-in">
-							<div class="timeline-image" style="background-image: url(https://picsum.photos/300/300);"></div>
+							<div class="timeline-image" style="background-image: url(./dist/img/engaged.jpg);"></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
 									<h3>Lamaran</h3>
