--- a/tts.html
+++ b/tts.html
@@ -1,8 +1,7 @@
 <html lang="en">
 	<head>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" />
-		<link rel="stylesheet" href="index.css" />
 		<title>Text to Speech</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body class="container mt-5 bg-dark">
 		<h1 class="text-light">Text to Speech</h1>
