--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
 <main data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="0" class="scrollspy-example" tabindex="0">
 	<!-- COVER SECTION -->
-	<section id="cover" class="flex-column align-items-end">
-		<center class="m-auto mt-lg-5">
+	<section id="cover" class="position-relative">
+		<center class="m-auto d-flex flex-column align-items-center">
 			<h5>The Wedding of</h5>
 			<h1>Surya & Arrum</h1>
 			<p>Kepada Yth.</p>
@@ -60,7 +60,7 @@
 				Lihat Undangan
 			</a>
 		</center>
-		<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+		<svg class="position-absolute bottom-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
 			<defs>
 				<linearGradient id="CoverGradient" x1="0%" y1="0%" x2="0%" y2="100%">
 					<stop offset="5%" stop-color="#032940" />
