--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				Lihat Undangan
 			</a>
 		</center>
-		<svg class="position-absolute bottom-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+		<svg class="z-n1 position-absolute bottom-lg-n10 bottom-0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
 			<defs>
 				<linearGradient id="CoverGradient" x1="0%" y1="0%" x2="0%" y2="100%">
 					<stop offset="5%" stop-color="#032940" />
