--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				<div class="col-lg-5 mt-3" data-aos="zoom-in-right">
 					<div class="row align-items-center">
 						<div class="col-8">
-							<h1 class="f-tangerine text-end">Surya Mauliadi</h1>
+							<h1 class="f-tangerine text-pink text-end">Surya Mauliadi</h1>
 							<center class="ms-auto" style="width: max-content;">
 								<strong>Putra Keempat dari</strong><br>
 								"Bapak Ediwirman" <br>
@@ -151,7 +151,7 @@
 							<img src="https://placebeard.it/500/501" class="img-responsive rounded-circle w-100" width="200px">
 						</div>
 						<div class="col-8">
-							<h1 class="f-tangerine text-start">Arrum Hidayati</h1>
+							<h1 class="f-tangerine text-pink text-start">Arrum Hidayati</h1>
 							<center class="mr-auto" style="width: max-content;">
 								<strong>Putri Pertama dari</strong><br>
 								"Bapak Sugito" <br>
