--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		</div>
 	</section>
 
-	<hr>
+	<marquee behavior="" direction="">ANGGAPLAH INI AWAN</marquee>
 
 	<!-- COUPLE SECTION -->
 	<section id="couple" class="vh-75" data-aos="zoom-in-up">
@@ -127,7 +127,7 @@
 				<div class="col-lg-5 mt-3" data-aos="zoom-in-right">
 					<div class="row align-items-center">
 						<div class="col-8">
-							<h2 class="f-tangerine text-pink fs-3 text-end">Surya Mauliadi</h2>
+							<h2 class="f-tangerine text-pink display-4 text-end" style="font-weight: bold;">Surya Mauliadi</h2>
 							<center class="ms-auto" style="width: max-content;">
 								<strong>Putra Keempat dari</strong><br>
 								"Bapak Ediwirman" <br>
@@ -151,7 +151,7 @@
 							<img src="https://placebeard.it/500/501" class="img-responsive rounded-circle w-100" width="200px">
 						</div>
 						<div class="col-8">
-							<h2 class="f-tangerine text-pink fs-3 text-start">Arrum Hidayati</h2>
+							<h2 class="f-tangerine text-pink display-4 text-start" style="font-weight: bold;">Arrum Hidayati</h2>
 							<center class="mr-auto" style="width: max-content;">
 								<strong>Putri Pertama dari</strong><br>
 								"Bapak Sugito" <br>
@@ -165,7 +165,7 @@
 		</div>
 	</section>
 
-	<hr>
+    <marquee behavior="" direction="">ANGGAPLAH INI AWAN</marquee>
 
 	<!-- DETAIL SECTION -->
 	<section id="detail">
@@ -249,7 +249,7 @@
 		</div>
 	</section>
 
-	<hr>
+    <marquee behavior="" direction="">ANGGAPLAH INI AWAN</marquee>
 
 	<!-- STORY SECTION -->
 	<section id="story">
@@ -321,7 +321,7 @@
 		</div>
 	</section>
 
-	<hr>
+    <marquee behavior="" direction="">ANGGAPLAH INI AWAN</marquee>
 
 	<!-- GALLERY -->
 	<section id="gallery">
@@ -426,6 +426,8 @@
 		</div>
 	</section>
 	
+	<marquee behavior="" direction="">ANGGAPLAH INI AWAN</marquee>
+
 	<!-- RSVP -->
 	<section id="rsvp" class="rsvp">
 		<div class="container">
@@ -709,7 +711,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-database.js"></script>
 <!-- CUSTOM -->
-<script src="./dist/js/trigger.js"></script>
+<!-- <script src="./dist/js/trigger.js"></script> -->
 <script src="./dist/js/features.js"></script>
 <script>
 
