--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
 <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.9.0/firebase-database.js"></script>
 <!-- CUSTOM -->
-<!-- <script src="./dist/js/trigger.js"></script> -->
+<script src="./dist/js/trigger.js"></script>
 <script src="./dist/js/features.js"></script>
 <script>
 
