--- a/index.html
+++ b/index.html
@@ -116,7 +116,31 @@
 		</div>
 	</section>
 
-	<marquee behavior="" direction="">ANGGAPLAH INI AWAN</marquee>
+	<style>
+		@keyframes moveLeft {
+			0% {
+				transform: translateX(100%);
+			}
+			100% {
+				transform: translateX(-100%);
+			}
+		}
+
+		.moving-image {
+			width: 100%;
+			height: 260px;
+			opacity: 0.8;
+			overflow: hidden;
+			position: relative;
+		}
+
+		.moving-image img {
+			animation: moveLeft 15s linear infinite; /* Adjust the duration as needed */
+		}
+	</style>
+	<div class="moving-image">
+		<img src="./dist/img/cloud1.png" width="80%" height="260px" alt="">
+	</div>
 
 	<!-- COUPLE SECTION -->
 	<section id="couple" class="vh-75" data-aos="zoom-in-up">
@@ -164,14 +188,12 @@
 			</div>
 		</div>
 	</section>
-
-    <marquee behavior="" direction="">ANGGAPLAH INI AWAN</marquee>
-
+	
 	<!-- DETAIL SECTION -->
 	<section id="detail">
 		<div class="container mt-5 text-center">
-			<h2 class="f-sacramento display-1 fw-bold">Detail Acara</h2>
 			<div class="row justify-content-center">
+				<h2 class="f-sacramento display-1 fw-bold">Detail Acara</h2>
 
 				<!-- Akad Nikah -->
 				<div class="col-lg-5 col-10 mb-3" data-aos="flip-up">
@@ -245,11 +267,17 @@
 					</div>
 				</div>
 
-			</div>        
+			</div>
+			<div class="row justify-content-center mt-5">
+				<div class="col-lg-5 col-10">
+					<h2 class="f-sacramento display-1 fw-bold">Lokasi Acara</h2>
+					<p>Alamat: Taman Adiyasa Blok A.18/28 RT.04/RW.05 <br> Kel. Cikasung Kec. Solear Kab. Tangerang</p>
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.5097108066425!2d106.42348507316902!3d-6.327933061914359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e420f467ce7fc9b%3A0xf221fd7ca50b519!2sSysNet!5e0!3m2!1sen!2sid!4v1700061823592!5m2!1sen!2sid" width="100%" height="300" class="mt-3" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+					<a href="https://goo.gl/maps/dLwe9FkETAa4Pdwj6" target="_blank" class="btn btn-light btn-sm my-3">Klik untuk membuka peta</a>
+				</div>
+			</div>
 		</div>
 	</section>
-
-    <marquee behavior="" direction="">ANGGAPLAH INI AWAN</marquee>
 
 	<!-- STORY SECTION -->
 	<section id="story">
@@ -320,8 +348,6 @@
 			</div>
 		</div>
 	</section>
-
-    <marquee behavior="" direction="">ANGGAPLAH INI AWAN</marquee>
 
 	<!-- GALLERY -->
 	<section id="gallery">
@@ -425,8 +451,6 @@
 			</div>
 		</div>
 	</section>
-	
-	<marquee behavior="" direction="">ANGGAPLAH INI AWAN</marquee>
 
 	<!-- RSVP -->
 	<section id="rsvp" class="rsvp">
