--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 	
 				<div class="col-2">
 					<label class="form-label"></label>
-					<button class="btn btn-primary form-control mb-2">Kirim</button>
+					<button class="btn-pink form-control mb-2">Kirim</button>
 				</div>
 			</form>
 			
@@ -535,14 +535,24 @@
 			<div class="pt-3 mt-4">
 				<p class="text-center text-white border-top pt-3">
 					<span>&copy; 2023 SMArt Wedding, Inc. All Rights Reserved.</span>
-					<span>Design by <a href="https://instagram.com/mxryaa">@ProSurya</a>.</span>
+					<span>Design by <a href="https://instagram.com/mrxryaa">@ProSurya</a>.</span>
 				</p>
 				<ul class="nav justify-content-center pb-3">
-					<li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-					<li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-					<li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-					<li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-					<li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+					<li class="nav-item">
+						<a href="https://www.instagram.com/mrxryaa" class="nav-link px-2 text-white"><i class="bi bi-instagram"></i></a>
+					</li>
+					<li class="nav-item">
+						<a href="https://www.tiktok.com/@suryamauliadi" class="nav-link px-2 text-white"><i class="bi bi-tiktok"></i></a>
+					</li>
+					<li class="nav-item">
+						<a href="https://www.facebook.com/Hacker1487" class="nav-link px-2 text-white"><i class="bi bi-facebook"></i></a>
+					</li>
+					<li class="nav-item">
+						<a href="https://wa.me/6287885858654" class="nav-link px-2 text-white"><i class="bi bi-whatsapp"></i></a>
+					</li>
+					<li class="nav-item">
+						<a href="" class="nav-link px-2 text-white"><i class="bi bi-twitter"></i></a>
+					</li>
 				</ul>
 			</div>
 		</div>
